| Summary: | ASTERISK-25121: Stasis: Fix unsafe use of stasis_unsubscribe in modules. | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2015-05-22 21:51:41 | Date Closed: | 2015-05-24 13:57:47 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/Stasis |
| Versions: | SVN 13.3.2 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Many uses of {{stasis_unsubscribe}} in modules can be reached through unload. In these cases it needs to be switched to {{stasis_unsubscribe_and_join}}.
Some subscription callbacks do nothing, for these I've created a noop callback function in stasis.c. This is used by some modules that monitor MWI topics to enable cache, since the callback does not become invalid after dlclose it is safe to use {{stasis_unsubscribe}} on these, even during module unload. | ||
| Comments: | |||